tests/cases/control-flow/errors/loop-break-borrow-release-conservative.ari
fn inspect(value: ref i64) -> i64 {
  return 3;
}

fn main() -> i64 {
  var number = 7;
  let shared = ref number;
  let use_shared = number == 7;

  while true {
    if use_shared {
      inspect(shared);
      break;
    } else {
      break;
    }
  }

  number = 9;
  return inspect(shared) + number;
}
